# lifehub-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt  schema.dbml
.github/: dependabot.yml
lifehub/: app.py  demo_app.py
lifehub/api/: app.py
lifehub/api/auth/: lib.py  router.py
lifehub/api/base/: __init__.py  api.py
lifehub/api/exceptions/: provider.py
lifehub/api/finance/: lib.py  router.py  schemas.py
lifehub/api/habitica/: __init__.py  habitica.py  models.py
lifehub/api/lib/: auth_config.py  authenticator.py  exceptions.py  user.py
lifehub/api/routers/: __init__.py  dependencies.py  finance.py  modules.py  provider.py  providers.py  server.py  tasks.py  user.py  user_modules.py  user_providers.py
lifehub/api/server/: lib.py  models.py  router.py
lifehub/api/tasks/: models.py  router.py
lifehub/api/trading212/: __init__.py  models.py  trading212.py
lifehub/api/ynab/: __init__.py  models.py  ynab.py
lifehub/app/: api.py  clean.py  db.py  fetch.py  main.py  setup.py
lifehub/app/api/: app.py  routers.py
lifehub/app/fetch_scripts/: fetch.py  fetch_networth.py  fetch_t212history.py  fetch_t212transactions.py  networth.py  t212history.py  utils.py
lifehub/app/fetchers/: fetch.py  networth.py  qbittorrent_stats.py  t212history.py
lifehub/config/: constants.py  providers.py
lifehub/core/: api_dependencies.py  api_exceptions.py
lifehub/fetch/: base.py  base_fetcher.py  networth.py  qbittorrent_stats.py  t212history.py
lifehub/models/: __init__.py  finance.py  module.py  provider.py  server.py  user.py
scripts/: add_cronjobs.sh  lifehub_cronjobs  remove_cronjobs.sh
tests/: conftest.py
tests/fetch/: test_base.py
(+216 files in other folders)
