[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lifehub-backend"
version = "0.0.1"
dependencies = [
    "requests",
]

[tool.setuptools.packages]
find = {}

[project.scripts]
lifehub-api = "lifehub.app.api:run"
lifehub-fetch = "lifehub.app.fetch:run"

[tool.ruff]
lint.extend-select = ["I"]
